Fixed wrap for MS Edge

--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -63,8 +63,6 @@
 
             .message {
                 margin: 0 !important;
-                word-break: break-word;
-                white-space: pre-wrap;
 
                 &:hover~.date {
                     display: block;
@@ -74,7 +72,7 @@
                     display: block;
                     color: $white;
                     min-height: 16px;
-                    word-break: break-word;
+                    word-break: break-all;
                 }
             }
 
